<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/attendanceTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="62dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="62dp"
        android:text="@string/attendance_title"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/currentTimeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="180dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="145dp"
        android:text="@string/current_time_text"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/attendanceTitle" />

    <TextClock
        android:id="@+id/textClock"
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        android:layout_marginTop="24dp"
        android:format24Hour="hh:mm"
        android:textColor="#000000"
        android:textSize="45sp"
        android:textStyle="bold"
        android:timeZone="Asia/Singapore"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currentTimeText" />

    <ImageButton
        android:id="@+id/qrImageButton"
        android:layout_width="241dp"
        android:layout_height="252dp"
        android:layout_marginStart="105dp"
        android:layout_marginTop="128dp"
        android:layout_marginEnd="105dp"
        android:background="@drawable/qr_code_button2"
        android:contentDescription="@string/qr_code"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currentTimeText" />

    <TextView
        android:id="@+id/qrCodeInstructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/qr_code_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/qrImageButton" />

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/qrCodeInstructions">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="right">

            <TextView
                android:id="@+id/checkInTimeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_weight="1"
                android:gravity="right"
                android:paddingRight="20dp"
                android:text="@string/check_in_time_text"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/checkInStatusText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="48dp"
                android:layout_weight="1"
                android:text="@string/check_in_status_text"
                android:textSize="20sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/checkOutTimeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_weight="1"
                android:paddingRight="20dp"
                android:text="@string/check_out_time_text"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/checkOutStatusText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="48dp"
                android:layout_weight="1"
                android:text="@string/check_out_status_text"
                android:textSize="20sp" />

        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>