<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ForgetPasswordActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView6">

            <TextView
                android:id="@+id/textView"
                style="@style/TextAppearance.EzHR.Title"
                android:layout_width="179dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:gravity="start"
                android:text="@string/forget_password"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_edt_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_your_email" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="24dp"
                    android:gravity="right"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/back_btn"
                        style="@style/Widget.Material3.Button.TonalButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingTop="12dp"
                        android:paddingBottom="12dp"
                        android:text="@string/back" />

                    <Button
                        android:id="@+id/reset_pass_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_weight="1"
                        android:paddingTop="12dp"
                        android:paddingBottom="12dp"
                        android:text="@string/reset_password" />
                </LinearLayout>

            </com.google.android.material.textfield.TextInputLayout>

            <ProgressBar
                android:id="@+id/forgetPasswordProgrssBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center_horizontal|center_vertical"
                android:layout_marginTop="10dp"
                android:visibility="gone" />

        </LinearLayout>

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="375dp"
            android:layout_height="287dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/pixeltrue_seo_1" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>