<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".LoginActivity">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="406dp"
            android:layout_height="244dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/pixeltrue_seo_1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView5">

            <TextView
                android:id="@+id/textView"
                style="@style/TextAppearance.EzHR.Title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:gravity="start"
                android:text="@string/change_password"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="56dp">

                <EditText
                    android:id="@+id/current_password_et"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/current_password"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="56dp">

                <EditText
                    android:id="@+id/new_password_et"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/new_password"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="56dp">

                <EditText
                    android:id="@+id/confirm_new_password_et"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/changePasswordBtn"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginTop="32dp"
                android:backgroundTint="#e6bc15"
                android:text="@string/change_password" />

            <ProgressBar
                android:id="@+id/editPasswordProgressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center_horizontal|center_vertical"
                android:layout_marginTop="10dp"
                android:visibility="gone" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>